6일차 수업 정리

--- a/day06/TestApp.ui
+++ b/day06/TestApp.ui
@@ -50,7 +50,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnStrart">
+  <widget class="QPushButton" name="btnstart">
    <property name="geometry">
     <rect>
      <x>110</x>
